# Kinefly

./: CMakeLists.txt  README  install.txt  mainpage.dox  package.xml  retracker  retracker_record
cfg/: flystate2phidgetsanalog.cfg  kinefly.cfg
launch/: main.launch  main_fullROI.launch  params_phidgetsanalog.launch  record.launch
launch/AB/: _main.launch  _record.launch  camera_pointgrey_usb3.launch  kinefly.yaml
launch/DS/: camera_pointgrey_usb3.launch  params_kinefly.launch
launch/JF/: _main.launch  _record.launch  camera_pointgrey_usb3.launch  params_kinefly.launch  params_phidgetsanalog.launch
launch/RL_v1/: _main.launch  camera_pointgrey_usb3.launch  ledpanels.launch  mcdaq.launch  params_RL.launch  params_environment.launch  params_kinefly.launch  params_learning.launch  params_ledpanels.launch  params_phidgetsanalog.launch
launch/SD/: _main.launch  _record.launch  source_bagfile.launch
launch/Shiyan/: _main.launch  _record.launch  params_kinefly.launch  params_phidgetsanalog.launch  source_bagfile.launch
launch/TEST/: _main.launch  _record.launch  camera_fullROI.launch  camera_pointgrey_usb3.launch  fictrac_camera.launch  mcdaq.launch  params_kinefly.launch  params_phidgetinterface.launch  params_phidgetsanalog.launch  source_bagfile.launch  source_live.launch  source_live_fullROI.launch
msg/: MsgAOPhidget.msg  MsgAOPhidgetState.msg  MsgAnalogIn.msg  MsgAnalogOut.msg  MsgDigitalIn.msg  MsgFlystate.msg  MsgState.msg
nodes/: MAB.py  MsgPanelsCommandDirect.py  RL_v1.py  acquirevoltages2msg.py  arena_environment.py  bodypart_intensity.py  bodypart_motion.py  fly.py  flystate2ledpanels.py  flystate2phidgetsanalog.py  flystate2phidgetsanalog_new.py  imageprocessing.py  imagewindow.py  kinefly.py  ledpanelsdirect.py  ledpanelsdirect_noros.py  msg2phidgetsanalog.py  phidget_test.py  plot_tipdata.py  plot_tracker.py  plot_wingdata.py  run_learning.py  run_learning_func_test.py  tracker_area.py  tracker_axis.py  tracker_edge.py  tracker_intensity.py  tracker_tip.py  ui.py  utilities.py  wingbeatdetector.py
scripts/: Experiment_CL_HeadWing_Figure.m  Experiment_HotHead.m  Experiment_Walking_Chirp.m  Experiment_Walking_SOS.m
srv/: SrvFloat32List.srv  SrvTipdata.srv  SrvTrackerdata.srv  SrvWingdata.srv
