<?xml version="1.0"?>
<package format="2">
  <name>Kinefly</name>
  <version>0.0.0</version>
  <description>The Kinefly package</description>
  <maintainer email="stevesafarik@gmail.com">Steve Safarik</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>message_runtime</depend>
  <depend>std_msgs</depend> 
  <depend>sensor_msgs</depend> 
  <depend>geometry_msgs</depend> 
  <depend>cv_bridge</depend> 
  <depend>dynamic_reconfigure</depend> 
  <depend>ledpanels</depend> 
  <depend>phidgets</depend> 
  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>